fixed mobile style issue for primary button links when title text breaks to new line, making part of text unreadable on hover

--- a/client/public/assets/styles/app.css
+++ b/client/public/assets/styles/app.css
@@ -468,6 +468,7 @@ background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #21D4FD 75%)
 
 .primary-btn-link:hover:before{
   width: 100%;
+  height: 100%;
   opacity: 1;
 }
 
